# copilot-agent

./: .coveragerc  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  notes.md  pyproject.toml  pytest.ini  ruff.toml
.github/: copilot-instructions.md  tests-instructions.md
.github/prompts/: tu-couverture.prompt.md  tu-execution.prompt.md
.github/workflows/: ci.yml  continuousIntegration.yml  docker.yml  update_faiss.yml
app/: doc_utils.py  main.py  utils.py
app/api/: copilot.py  health.py
app/core/: config.py
app/services/: copilot_service.py  embedding_service.py  faiss_service.py  translation_service.py  vector_cache.py
app/utils/: __init__.py  document_utils.py  export_utils.py  git_utils.py  github_discussions_utils.py  markdown_utils.py  repo_utils.py  translation_utils.py  vector_db_utils.py
script/: update_chroma.py  update_faiss.py
scripts/: update_chroma.py  update_faiss.py
temp/faiss_index/: index.faiss  metadata.json
tests/: conftest.py  test_copilot_service.py  test_e2e.py  test_embedding_service.py  test_faiss_service.py  test_main.py
tests/api/: test_copilot.py  test_endpoints.py  test_health.py
tests/scripts/: test_update_chroma.py  test_update_faiss.py
tests/services/: test_copilot_service.py  test_embedding_service.py  test_faiss_service.py  test_translation_service.py  test_vector_cache.py
tests/utils/: test_document_utils.py  test_export_utils.py  test_git_utils.py  test_github_discussions_utils.py  test_markdown_utils.py  test_repo_utils.py  test_translation_utils.py  test_vector_db_utils.py
