[tool.poetry]
name = "app"
version = "1.0.0"
description = "Agent Copilot LLM avec RAG (FAISS embeddings)"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.9"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
numpy = "^1.26.4"
faiss-cpu = "^1.7.4"
sentence-transformers = "^2.5.1"
chromadb = "^0.4.24"
boto3 = "^1.34.48"
pydantic = "^2.6.3"
pytest-mock = "^3.14.0"
boto = "^2.49.0"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.2.0"
ruff = "*"
mypy = "*"
pytest-env = "^1.1.3"
moto = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.ruff]
# Règle: formatage cohérent
line-length = 88
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
]

[tool.ruff.lint]
# Règle: normes de codage
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I001", # isort
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "D",    # pydocstyle
]
ignore = [
    "E501",  # line too long (handled by black)
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "D205",  # 1 blank line required between summary line and description
    "D212",  # Multi-line docstring summary should start at the first line
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
# Règle: style de documentation
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "E501"]
"__init__.py" = ["F401"]

[tool.ruff.format]
# Règle: style de formatage
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

